# ssh-runner

./: CMakeLists.txt  README.md
krunner-ssh/: CMakeLists.txt  plasma-runner-ssh.desktop  ssh.cpp  ssh.h
